# Soul-Shell

./: .gitignore  README.md  pyproject.toml
node-ui/: package.json
node-ui/src/: bridge.ts  ids.ts  index.tsx  store.ts  types.ts
node-ui/src/components/: CmdQueue.tsx  Header.tsx  InputBar.tsx  MessageList.tsx  StreamView.tsx
node-ui/src/hooks/: useAutoLoop.ts  useBridge.ts  useKeys.ts
prompts/: system.md  user_profile.template.md
soul_shell/: __main__.py  server.py
soul_shell/adapters/: anthropic.py  base.py  gemini.py  openai_compat.py
soul_shell/config/: defaults.py  loader.py
soul_shell/engine/: executor.py  stream_parser.py
soul_shell/models/: channel.py  probe.py  registry.py
soul_shell/shell/: interceptor.py  pty_host.py
soul_shell/ui/: plan_display.py  prompt.py
tests/: test_interceptor.py  test_openai_compat.py  test_registry.py  test_stream_parser.py
