[project]
name = "soul-shell"
version = "0.1.0"
description = "带有赛博灵魂的毒舌 Linux 终端代理"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "prompt-toolkit>=3.0",
]

[project.scripts]
soul-shell = "soul_shell.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
